--- a/.github/workflows/scrapProjectFromGitlab.yml
+++ b/.github/workflows/scrapProjectFromGitlab.yml
@@ -1,6 +1,8 @@
 name: GitLab-to-GitHub-Pipeline
 on:
   pull_request:
+   branches:
+   - main
 jobs:
   clone-gitlab-project:
     runs-on: ubuntu-latest
